// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFormIndex simple getFormIndex for a user 1`] = `
[
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "invitation",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "notificationsSummary",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "event",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventCreation",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": -1,
    },
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 0,
    },
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 1,
    },
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 2,
    },
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": {
      "actions": "receive",
      "conditions": null,
      "entityName": "member",
      "fields": null,
      "identifier": 60815,
      "inverted": true,
      "reason": null,
      "subject": "eventUpdate",
    },
    "subject": "eventUpdate",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventAggregation",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "event",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventCreation",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": -1,
    },
    "entity": {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 0,
    },
    "entity": {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 1,
    },
    "entity": {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 2,
    },
    "entity": {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": {
      "actions": "receive",
      "conditions": null,
      "entityName": "member",
      "fields": null,
      "identifier": 60815,
      "inverted": true,
      "reason": null,
      "subject": "eventUpdate",
    },
    "subject": "eventUpdate",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventAggregation",
  },
]
`;

exports[`getFormIndex simple getFormIndex for an agenda 1`] = `
[
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventCreation",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": -1,
    },
    "entity": {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 0,
    },
    "entity": {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 1,
    },
    "entity": {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": {
      "state": 2,
    },
    "entity": {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventUpdate",
  },
  {
    "actions": "receive",
    "conditions": null,
    "entity": {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventAggregation",
  },
]
`;
